Fix windows z-index problem

--- a/src/style.css
+++ b/src/style.css
@@ -74,6 +74,7 @@ body
 {
     position: absolute;
     display: block;
+    z-index: 1;
     top: calc(50% - 200px);
     left: calc(50% - 300px);
     height: 400px;
@@ -153,4 +154,17 @@ body
     background: rgba(255, 255, 255, 0.3);
     -webkit-box-shadow: 0px 0px 50px -5px rgba(0,0,0,0.5); 
     box-shadow: 0px 0px 50px -5px rgba(0,0,0,0.5);
+}
+
+.title
+{
+    display: block;
+    position: absolute;
+    cursor: default;
+    top: 3px;
+    left: 10px;
+    color: white;
+    font-size: 12px;
+    font-weight: 100;
+    line-height: 1;
 }
